# code-completion

./: .gitignore  NOTES.md  README.md  architecture.py  builtin_architecture.py  dataset.py  dset_tester.py  eval.py  g.py  hyperparam_tune.py  launch  logger.py  output.txt  pyproject.toml  renamify.sh  resources.md  safe_cleanup.sh  tester.py  train.py  trainingmanager.py  transformer.py
archive/: ascii_percentage.py  bpe_test.py  dataset.py  tester.py
archive-misc/: architecture-v1.py  ascii_percentage.py  bpe_test.py  check-memorization.py  concatenator.py  dataset.py  dset_splitter.py  entropy_upper_bound.py  eval_old.py  f1_score.py  loss_plotting_code.py  plot_metrics.py  test_new_attnmask.py  tester.py  total_time.py  wikitext.py
huggingface_dataset/: README.md  create_elaborated_metadata_table.py  create_metadata_table.py  dataset.py
readme-imgs/: funny_stack_trace.txt
scraping/: 15k-repos.txt  files.py  main.py  python_files.txt  repositories.txt  seen_shas.txt
smaller-er-test-data/: bpe_model.model
smaller-test-data/: bpe_model.model  custom_tokens_vocab.txt  encoded_chunked.pt
test-data/: 1kinghenryiv_part106.txt  1kinghenryiv_part11.txt  1kinghenryiv_part13.txt  1kinghenryiv_part137.txt  1kinghenryiv_part138.txt  1kinghenryiv_part143.txt  1kinghenryiv_part16.txt  1kinghenryiv_part160.txt  1kinghenryiv_part162.txt  1kinghenryiv_part167.txt  1kinghenryiv_part17.txt  1kinghenryiv_part172.txt  1kinghenryiv_part175.txt  1kinghenryiv_part186.txt  1kinghenryiv_part188.txt  1kinghenryiv_part194.txt  1kinghenryiv_part203.txt  1kinghenryiv_part214.txt  (+1461 more)
(+7722 files in other folders)
